# sample-gpu

./: Makefile  README.md  vector_add.cu  vector_sqrt.cu  vector_sqrt_compare.cu
mnist/: README.md  mnist_train.py  pyproject.toml
mnist/src/mnist/: __init__.py
