[project]
name = "mnist"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "kyosu-1", email = "sho013039@gmail.com" }
]
dependencies = [
    "torch>=2.3.0",
    "torchvision>=0.18.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mnist"]
